common/force-app/main/default/objects/Bank_Transfers__c/Bank_Transfers__c.object-meta.xml
<CustomObject>
    <description>This object will be used to reconcile Bank Transfers</description>
    <label>Bank Transfer</label>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>Bank Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>