common/force-app/main/default/objects/Bank_Transfers__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Transfer from Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Transfers</relationshipLabel>
    <relationshipName>Bank_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>