common/force-app/main/default/objects/Bank_Transfers__c/fields/Chart_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_Of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart Of Account</label>
    <referenceTo>Chart_Of_Account__c</referenceTo>
    <relationshipLabel>Bank Transfers</relationshipLabel>
    <relationshipName>Bank_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>