common/force-app/main/default/objects/Bank_Transfers__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>