common/force-app/main/default/objects/Bank_Transfers__c/fields/Extracted_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Member_ID__c</fullName>
    <formula>IF(
    BEGINS(Reference__c, &quot;M-&quot;),
    &quot;M-&quot; &amp; LEFT(
        MID(Reference__c, 3, LEN(Reference__c) - 2),
        FIND(&quot; &quot;, MID(Reference__c, 3, LEN(Reference__c) - 2)) - 1
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extracted_Member_ID</label>
    <type>Text</type>
</CustomField>