common/force-app/main/default/objects/Bank_Transfers__c/fields/Extracted_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Opportunity_ID__c</fullName>
    <formula>IF(
    CONTAINS(Reference__c, &quot; O-&quot;),
    &quot;O-&quot; &amp;
    MID(
        Reference__c,
        FIND(&quot; O-&quot;, Reference__c) + 3,
        FIND(&quot; &quot;, Reference__c &amp; &quot; &quot;, FIND(&quot; O-&quot;, Reference__c) + 3) - FIND(&quot; O-&quot;, Reference__c) - 3
    ),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extracted_Opportunity_ID</label>
    <type>Text</type>
</CustomField>