common/force-app/main/default/objects/Bank_Transfers__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investment related to this bank transfer</description>
    <inlineHelpText>Investment related to this bank transfer</inlineHelpText>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Bank Transfers</relationshipLabel>
    <relationshipName>Bank_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>