common/force-app/main/default/objects/Bank_Transfers__c/fields/Is_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Is_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reconciled</label>
    <type>Checkbox</type>
</CustomField>