common/force-app/main/default/objects/Bank_Transfers__c/fields/VC_Entity__c.field-meta.xml
<CustomField>
    <fullName>VC_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VC Entity related to this bank transfer</description>
    <inlineHelpText>VC Entity related to this bank transfer</inlineHelpText>
    <label>VC Entity</label>
    <referenceTo>VC_Entity__c</referenceTo>
    <relationshipLabel>Bank Transfers</relationshipLabel>
    <relationshipName>Bank_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>