common/force-app/main/default/objects/Bank_Transfers__c/fields/Xero_ID_of_Bank_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID_of_Bank_Transfer__c</fullName>
    <label>Xero ID of Bank Transfer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>