common/force-app/main/default/objects/Bank_Transfers__c/fields/Xero_ID_Of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID_Of_Invoice__c</fullName>
    <label>Xero ID Of Invoice</label>
    <type>TextArea</type>
</CustomField>