common/force-app/main/default/objects/Bank_Transfers__c/fields/Xero_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Xero_Record_URL__c</fullName>
    <description>Hyperlink to Xero Bank Transfer Record</description>
    <formula>HYPERLINK(&quot;https://go.xero.com/Bank/ViewTransaction.aspx?bankTransactionID=&quot; &amp;  Xero_ID_of_Bank_Transfer__c , &quot;View in Xero&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hyperlink to Xero Bank Transfer Record</inlineHelpText>
    <label>Xero Record URL</label>
    <type>Text</type>
</CustomField>