common/force-app/main/default/objects/Bank_Transfers__c/fields/XI_Bank_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>XI_Bank_Account_Code__c</fullName>
    <label>XI Bank Account Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>