common/force-app/main/default/objects/Bank_Transfers__c/fields/XI_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>XI_Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>