common/force-app/main/default/objects/Bank_Transfers__c/fields/XI_Staus__c.field-meta.xml
<CustomField>
    <fullName>XI_Staus__c</fullName>
    <label>Staus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>