common/force-app/main/default/objects/Bank_Transfers__c/fields/XI_Type__c.field-meta.xml
<CustomField>
    <fullName>XI_Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>