common/force-app/main/default/objects/Bank_Transfers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Contact__c</columns>
    <columns>Reference__c</columns>
    <columns>Transaction__c</columns>
    <columns>Chart_Of_Account__c</columns>
    <columns>Is_Reconciled__c</columns>
    <columns>Xero_ID_of_Bank_Transfer__c</columns>
    <columns>XI_Staus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>XI_Type__c</columns>
    <columns>XI_Bank_Account_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>